<resources>
    <string name="app_name">TaskTimer App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuTitle_addTask">Add Task</string>
    <string name="menuTile_showDurations">Durations Report</string>
    <string name="menuTitle_settings">Settings</string>
    <string name="menuTitle_showAbout">About Task Timer</string>
    <string name="menuTitle_generate">Generate Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit a Tasks details</string>
    <string name="delete_button_description">Button to delete a Task</string>
    <string name="addedit_task_name">Task name (Required)</string>
    <string name="addedit_task_description">Task description (Optional)</string>
    <string name="addedit_task_sortorder">Sort order</string>
    <string name="addedit_button_save">Save</string>
</resources>
